# Wedio

./: 3DModelingSoftware.pro  BUILD.md  CMakeLists.txt  LICENSE  README.md  build_project.bat
include/: Camera.h  DockablePanel.h  MainWindow.h  PanelManager.h  RhinoButton.h  SettingsDialog.h  ThreeDCanvas.h
src/: Camera.cpp  DockablePanel.cpp  MainWindow.cpp  PanelManager.cpp  RhinoButton.cpp  SettingsDialog.cpp  ThreeDCanvas.cpp  main.cpp
src/resources/: resources.qrc  style.css
src/resources/shaders/: basic.vert
src/shaders/: basic.frag
